--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "distance_between_neighbors(bob, suzie)"
+    "distance_between_neighbors(f, suzie)"
    ]
   },
   {
