--- a/index.ipynb
+++ b/index.ipynb
@@ -74,8 +74,8 @@
     "neighbors = [{'name': 'Bob', 'x': 4, 'y': 8}, {'name': 'Suzie', 'x': 1, 'y': 11}, \n",
     "             {'name': 'Fred', 'x': 5, 'y': 8}, {'name': 'Edgar', 'x': 6, 'y': 13},\n",
     "             {'name': 'Steven', 'x': 3, 'y': 6}, {'name': 'Natalie', 'x': 5, 'y': 4}]\n",
-    "fred = neighbors[0]\n",
-    "s= neighbors[1]"
+    "fred = neighbors[1]\n",
+    "natalie = neighbors[]"
    ]
   },
   {
